# pipeforge

./: .gitignore  CHANGELOG.md  Makefile  PipeForge_SRS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ci.md  fxp_semantics.md  fxp_semantics_checklist.md  rtm.csv
docs/phase_reports/: 0.md  1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9-matlab-bridge.md
seed/: matlib_audit.py
src/pipeforge/: __init__.py  cli.py  paths.py
src/pipeforge/core/: __init__.py  project.py  watch.py
src/pipeforge/core/audit/: __init__.py  engine.py  findings.py  report.py
src/pipeforge/core/bisect/: __init__.py  engine.py
src/pipeforge/core/codegen/: __init__.py  axis.py  emitter.py  mixed.py
src/pipeforge/core/cosim/: __init__.py  formal.py  harness.py  modular.py  oracle.py  runner.py  stimulus.py  trace.py  vectors.py  wave.py
src/pipeforge/core/costmodel/: __init__.py  model.py  resources.py
src/pipeforge/core/diagnostics/: __init__.py  traceability.py  triage.py
src/pipeforge/core/dse/: __init__.py  sweep.py
src/pipeforge/core/frontend/: __init__.py  ast.py  dag.py  functions.py  lexer.py  loops.py  parser.py  varinfo.py
src/pipeforge/core/fxp/: __init__.py  evaluator.py  fx.py  ops.py  validate.py
src/pipeforge/core/mapping/: __init__.py  consume.py  model.py  persist.py  propose.py  sources.py  staleness.py  validate.py
src/pipeforge/core/optimize/: __init__.py  rewrite.py
src/pipeforge/core/ranges/: __init__.py  interval.py  propagate.py
src/pipeforge/core/reports/: __init__.py  html.py  junit.py  sarif.py
src/pipeforge/core/svlint/: __init__.py  checks.py  model.py  parse.py  verilator.py
src/pipeforge/core/synth/: __init__.py  estimate.py
src/pipeforge/core/viz/: __init__.py  layout.py  svg.py
src/pipeforge/core/workspace/: __init__.py  mat_loader.py  reconcile.py  snapshot_bridge.py  sv_struct.py
src/pipeforge/demos/: 01_findings.m  02_normalize3d.m  03_pipeline.m  03_pipeline.sv  04_lint_bugs.sv  05_ranges.m  06_dse.m  08_fir.m  __init__.py  index.json
src/pipeforge/demos/matlab/: make_params.m  model.m  params.mat  setup_model.m
src/pipeforge/gui/: __init__.py  activity.py  app.py  detect.py  main_window.py  recent.py  toolprobe.py  workspace.py
src/pipeforge/services/: __init__.py  matlab_bridge.py  matlab_session.py  tools.py
tests/: conftest.py
tests/fixtures/: example.m  feedback.m  gen500.m  normalize3d.m  rootsqr.m
tests/fixtures/cosim/: reshape.m  sample.m  sample.sv
tests/fixtures/matlab/: demo.m  setup_demo.m
tests/fixtures/svlint/: bad_data_reset.sv  bad_missing_pipe.sv  bad_naming.sv  bad_stage_skew.sv  bad_suffix.sv  bad_unknown.sv  bad_valid_chain.sv  bad_valid_chain_div.sv  bad_valid_unreset.sv  bad_wrong_pipe.sv  good_div.sv  good_example.sv  good_scalar.sv
tests/fixtures/workspace/: software.sv
tests/golden/: example_audit.json  example_audit.txt  feedback_audit.json  feedback_audit.txt  gen500_audit.json  gen500_audit.txt  gen_normalize3d.sv  gen_rootsqr.sv  gen_sample.sv  normalize3d_audit.json  normalize3d_audit.txt  rootsqr_audit.json  rootsqr_audit.txt  test_golden_audit.py
tests/gui/: conftest.py  test_datacards.py  test_demos_dialog.py  test_density.py  test_dse_view.py  test_feedback_ux.py  test_inspector.py  test_main_window.py  test_mapping_view.py  test_matlab_gui.py  test_motion.py  test_polish.py  test_selection_sync.py  test_sidebar.py  test_smoke.py  test_states.py  test_streaming_ux.py  test_timeline_cursor.py  test_timeline_edges.py  test_timeline_render.py  test_timeline_values.py  test_typography.py  test_ux.py  test_views.py
tests/integration/: test_backend_verilator_native.py  test_bisect_e2e.py  test_cli_cosim.py  test_cosim_e2e.py  test_cosim_probe.py  test_cosim_selftest.py  test_cosim_trace_native.py  test_engineer_workflow_e2e.py  test_loops_e2e.py  test_map_consumed_downstream.py  test_modular_cosim.py  test_reshape_cosim.py  test_streaming_e2e.py  test_triage.py  test_vector_oracle.py
tests/property/: test_dag_differential.py
tests/unit/: test_architecture.py  test_audit.py  test_backend_select.py  test_bisect.py  test_cli.py  test_cli_workflow.py  test_codegen.py  test_codegen_probe.py  test_cosim.py  test_cosim_trace.py  test_costmodel.py  test_dag_shape.py  test_demos.py  test_dse.py  test_engineer_workflow.py  test_formal.py  test_frontend.py  test_frontend_reshape.py  test_fxp_coverage.py  test_fxp_evaluator.py  test_fxp_layout.py  test_fxp_ops.py  test_loops.py  test_mapping_groups.py  test_mapping_persist.py  test_mapping_propose.py  test_mapping_staleness.py  test_mat_loader.py  test_matlab_bridge.py  test_matlab_session.py  test_parser_properties.py  test_perf.py  test_ranges.py  test_ranges_constants.py  test_ranges_measured.py  test_reconcile.py  test_shape_aware.py  test_snapshot_bridge.py  test_stimulus_cadence.py  test_stimulus_hazard.py  (+11 more)
tools/: capture_screens.py  check_rtm.py
(+35 files in other folders)
