[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeforge"
version = "0.2.1"
description = "MATLAB-to-nkMatlib FPGA pipeline workbench: audit, verify, visualize, generate"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "A. Flores" }]
dependencies = [
    "numpy>=1.26",
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
    "scipy>=1.11",  # .mat (v5/v7) ingestion (WS-1)
    "h5py>=3.10",  # .mat v7.3 (HDF5) ingestion (WS-1)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-qt",
    "hypothesis>=6",
    "ruff",
    "mypy",
]

[project.scripts]
pipeforge-cli = "pipeforge.cli:main"

[project.gui-scripts]
pipeforge = "pipeforge.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pipeforge.gui.theme" = ["themes/*.json"]
"pipeforge.demos" = ["*.json", "*.m", "*.sv", "matlab/*.m", "matlab/*.mat"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["seed"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "SIM108", # ternary not always clearer
    "SIM102", # nested ifs are sometimes clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
# 3.12 target: numpy>=2.3 stubs use `type` statements that do not parse
# under 3.11 mypy semantics; runtime 3.11 support is held by the CI test
# matrix, and no 3.12-only syntax exists in src (ruff target enforces).
python_version = "3.12"
strict = true
files = ["src/pipeforge/core"]
warn_unreachable = true

[[tool.mypy.overrides]]
# pyslang ships .pyi stubs that mypy cannot parse; it is an optional
# runtime-probed dependency (SL-1), so skip analyzing it.
module = ["pyslang", "pyslang.*"]
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# scipy and h5py ship no (usable) type stubs; used only by core/workspace (WS-1).
module = ["scipy", "scipy.*", "h5py", "h5py.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# numpy >= 2.3 stubs use `type` statements, unparseable under the 3.11 target
# this project checks against; numpy is data plumbing here (WS-1), skip it.
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "tool(name): test requires an external tool (verilator, cocotb, pyslang, dot, yosys)",
    "perf: performance tests (NF-1, NF-2, NF-3)",
    "req(id): SRS requirement covered by this test (for docs/rtm.csv)",
]

[tool.coverage.run]
source = ["src/pipeforge"]
omit = ["src/pipeforge/gui/app.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
